Fix cut off logo for GGT on chrome

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -193,9 +193,6 @@
 
     grid-area: logo;
     justify-self: start;
-    svg {
-        width: 100%;
-    }
 }
 
 .menuContent {
